[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/loot/gold1.gd" type="Script" id=1]
[ext_resource path="res://assets/coin/coin.obj" type="ArrayMesh" id=2]
[ext_resource path="res://assets/gold bag/13450_Bag_of_Gold_v1_L3.obj" type="ArrayMesh" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.831373, 0.686275, 0.215686, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.831373, 0.686275, 0.215686, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3, 2, 2.4 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2, 2, 2 )

[sub_resource type="Animation" id=5]
resource_name = "Health_Anim"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Holder:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Holder:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="Gold1_Pickup" type="Spatial"]
script = ExtResource( 1 )

[node name="Holder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Gold1_Small" type="Spatial" parent="Holder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.449994, 0 )

[node name="coin" type="MeshInstance" parent="Holder/Gold1_Small"]
transform = Transform( 0.7, 0, 0, 0, 0.573406, 0.401504, 0, -0.401504, 0.573406, 0.5, 0.550006, 1.19209e-007 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="Gold1_large" type="Spatial" parent="Holder"]

[node name="Health_Kit" type="MeshInstance" parent="Holder/Gold1_large"]
transform = Transform( 0.3, 0, 0, 0, -0.0776457, 0.289778, 0, -0.289778, -0.0776457, 0.5, -1, 0.5 )
visible = false
mesh = ExtResource( 3 )
material/0 = null

[node name="Gold_Pickup_Trigger" type="Area" parent="Holder"]
editor/display_folded = true

[node name="Shape_Kit" type="CollisionShape" parent="Holder/Gold_Pickup_Trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.570922, 0 )
shape = SubResource( 3 )

[node name="Shape_Kit_Small" type="CollisionShape" parent="Holder/Gold_Pickup_Trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.744072, 0 )
shape = SubResource( 4 )
disabled = true

[node name="Animation_Player" type="AnimationPlayer" parent="."]
autoplay = "Health_Anim"
anims/Health_Anim = SubResource( 5 )

